# GildedRoseCpp

./: .gitignore  CMakeLists.txt  ReadMe.md
Cpp/src/: GildedRose.h
Ruby/lib/: gilded_rose.rb
Ruby/spec/: gilded_rose_spec.rb
src/: GildedRose.cpp  GildedRose.h
test/: GildedRose_Test.cpp  NormalItem_Tests.hpp
